修正產生預設設定檔亂碼